<resources>
	<string name="app_name">MDP Group 17</string>
	<string name="_null" />
	<string name="_success">Success</string>
	<string name="_turnon">Turn On</string>
	<string name="_turnoff">Turn Off</string>
	<string name="_code">+++</string>
	<string name="_delimiter">,</string>
	<string name="_bracket_s">{</string>
	<string name="_bracket_e">}</string>

	<string name="menu_restart">Restart Map</string>

	<string name="mdf_header">Map Descriptor String</string>
	<string name="mdf_s1">MDF String 1</string>
	<string name="mdf_s2">MDF String 2</string>

	<string name="arrow_header">Obstacle with Up Arrows</string>
	<string name="menu_sensor">arduino :: g</string>

	<string name="bt_header">Bluetooth</string>
	<string name="bt_discover">Toggle Discovery</string>
	<string name="bt_find">Find Devices</string>
	<string name="bt_connect_yes">Connected to:</string>
	<string name="bt_connect_no">Not Connected</string>
	<string name="bt_paired">Paired Devices</string>
	<string name="bt_reconnect">Reconnect to Last Device</string>
	<string name="bt_robust_on">Robust: On</string>
	<string name="bt_robust_off">Robust: Off</string>

	<string name="msg_header">Messaging</string>
	<string name="msg_send">Send</string>

	<string name="tilt_header">Accelerometer</string>

	<string name="time_header">Timings</string>
	<string name="time_explore_qn">Exploration Time:</string>
	<string name="time_fastest_qn">Fastest Path Time:</string>
	<string name="time_fastest">Fastest</string>
	<string name="time_explore">Explore</string>
	<string name="time_start">Start</string>
	<string name="time_stop">Stop</string>
	<string name="time_reset">Reset</string>
	<string name="time_default">0:00:000</string>

	<string name="point_header">Coordinates</string>
	<string name="point_x_qn">X:</string>
	<string name="point_y_qn">Y:</string>
	<string name="point_origin">Origin</string>
	<string name="point_way">Way</string>
	<string name="point_origin_qn">Origin point:</string>
	<string name="point_way_qn">Way point:</string>
	<string name="point_isset_false">Set Point</string>
	<string name="point_isset_true">Confirm</string>

	<string name="display_header">Display</string>
	<string name="display_manual">Manual</string>
	<string name="display_auto">Auto</string>
	<string name="display_update">Update</string>

	<string name="config_header">Configurations</string>
	<string name="config_reconfig">Reconfigure</string>
	<string name="config_f1">F1</string>
	<string name="config_f2">F2</string>
	<string name="config_f1_qn">F1:</string>
	<string name="config_f2_qn">F2:</string>
	<string name="config_f1_default">F1_DEFAULT</string>
	<string name="config_f2_default">F2_DEFAULT</string>
	<string name="config_save">Save</string>

	<string name="status_default">No Status</string>

	<string name="error_robot_move_crash">Robot will collide with obstacle</string>
	<string name="error_robot_move_no">Robot cannot move to that point</string>
</resources>
