<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ly_bt"
    android:layout_width="match_parent"
    android:layout_height="400dp"
    android:orientation="vertical"
    android:padding="5dp"
    android:paddingEnd="14dp"
    android:paddingStart="14dp">

    <TextView
        android:id="@+id/bt_lbl_header"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="bottom|center_horizontal"
        android:text="@string/bt_header"
        android:textAllCaps="true"
        android:textColor="@color/colorAccent" />

    <ListView
        android:id="@+id/bt_lv_devices"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:background="@drawable/d_box" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_btn_find"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/bt_find"
            android:textAllCaps="true"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
            android:textSize="14sp" />

        <Button
            android:id="@+id/bt_btn_paired"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/bt_paired"
            android:textAllCaps="true"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
            android:textSize="14sp" />

    </LinearLayout>

</LinearLayout>